# esp32-midi-pentatonic-instrument

./: .gitignore  ButtonSerialBridge.ino  README.md  pyproject.toml
analysis/: README.md  ioi_120bpm_run_01_report.json
data/: README.md  ioi_120bpm_run_01.csv
tap_mapper/: __init__.py  __main__.py  config.py  runtime.py  types.py
tap_mapper/adapters/: __init__.py  midi_output.py  serial_input.py
tap_mapper/domain/: __init__.py  scale.py  scale_definition.py  tap_sequence.py
tools/: __init__.py  analyze_ioi_samples.py  collect_ioi_samples.py
